{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 18,
  "lineage": "b3ed6772-73bf-265a-1ba0-01f1c6c84b13",
  "resources": [
    {
      "module": "module.component[\"cart\"]",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:975391191302:targetgroup/roboshop-dev-cart/51d646f5c56cdb4a",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:975391191302:listener-rule/app/roboshop-dev-backend-alb/bbb89e45fe55968b/b093b8e0c06a13d1/b07fbe0e6ebd9506",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "cart.backend-dev.rameshaws.site"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:975391191302:listener-rule/app/roboshop-dev-backend-alb/bbb89e45fe55968b/b093b8e0c06a13d1/b07fbe0e6ebd9506",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:975391191302:listener/app/roboshop-dev-backend-alb/bbb89e45fe55968b/b093b8e0c06a13d1",
            "priority": 30,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "listener_arn"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.component.aws_lb_target_group.main",
            "module.component.data.aws_ssm_parameter.backend_alb_listener_arn",
            "module.component.data.aws_ssm_parameter.frontend_alb_listener_arn",
            "module.component.data.aws_ssm_parameter.vpc_id"
          ]
        }
      ]
    },
    {
      "module": "module.component[\"cart\"]",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:975391191302:targetgroup/roboshop-dev-cart/51d646f5c56cdb4a",
            "arn_suffix": "targetgroup/roboshop-dev-cart/51d646f5c56cdb4a",
            "deregistration_delay": "120",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 5,
                "matcher": "200-299",
                "path": "/health",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 2,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:975391191302:targetgroup/roboshop-dev-cart/51d646f5c56cdb4a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:975391191302:loadbalancer/app/roboshop-dev-backend-alb/bbb89e45fe55968b"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "roboshop-dev-cart",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-03cddf8bef4310f2c"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.component.data.aws_ssm_parameter.vpc_id"
          ]
        }
      ]
    },
    {
      "module": "module.component[\"catalogue\"]",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:975391191302:targetgroup/roboshop-dev-catalogue/9fa77c88005d6e76",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:975391191302:listener-rule/app/roboshop-dev-backend-alb/bbb89e45fe55968b/b093b8e0c06a13d1/18aff7f31e940205",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "catalogue.backend-dev.rameshaws.site"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:975391191302:listener-rule/app/roboshop-dev-backend-alb/bbb89e45fe55968b/b093b8e0c06a13d1/18aff7f31e940205",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:975391191302:listener/app/roboshop-dev-backend-alb/bbb89e45fe55968b/b093b8e0c06a13d1",
            "priority": 10,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "listener_arn"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.component.aws_lb_target_group.main",
            "module.component.data.aws_ssm_parameter.backend_alb_listener_arn",
            "module.component.data.aws_ssm_parameter.frontend_alb_listener_arn",
            "module.component.data.aws_ssm_parameter.vpc_id"
          ]
        }
      ]
    },
    {
      "module": "module.component[\"catalogue\"]",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:975391191302:targetgroup/roboshop-dev-catalogue/9fa77c88005d6e76",
            "arn_suffix": "targetgroup/roboshop-dev-catalogue/9fa77c88005d6e76",
            "deregistration_delay": "120",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 5,
                "matcher": "200-299",
                "path": "/health",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 2,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:975391191302:targetgroup/roboshop-dev-catalogue/9fa77c88005d6e76",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:975391191302:loadbalancer/app/roboshop-dev-backend-alb/bbb89e45fe55968b"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "roboshop-dev-catalogue",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-03cddf8bef4310f2c"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.component.data.aws_ssm_parameter.vpc_id"
          ]
        }
      ]
    },
    {
      "module": "module.component[\"frontend\"]",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:975391191302:targetgroup/roboshop-dev-frontend/875750bdb877f8a8",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:975391191302:listener-rule/app/roboshop-dev-frontend-alb/e1d8b1171f984f4d/47a909c4cf0b27bf/eba02defb1efa234",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "dev.rameshaws.site"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:975391191302:listener-rule/app/roboshop-dev-frontend-alb/e1d8b1171f984f4d/47a909c4cf0b27bf/eba02defb1efa234",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:975391191302:listener/app/roboshop-dev-frontend-alb/e1d8b1171f984f4d/47a909c4cf0b27bf",
            "priority": 10,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "listener_arn"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.component.aws_lb_target_group.main",
            "module.component.data.aws_ssm_parameter.backend_alb_listener_arn",
            "module.component.data.aws_ssm_parameter.frontend_alb_listener_arn",
            "module.component.data.aws_ssm_parameter.vpc_id"
          ]
        }
      ]
    },
    {
      "module": "module.component[\"frontend\"]",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:975391191302:targetgroup/roboshop-dev-frontend/875750bdb877f8a8",
            "arn_suffix": "targetgroup/roboshop-dev-frontend/875750bdb877f8a8",
            "deregistration_delay": "120",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 5,
                "matcher": "200-299",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 2,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:975391191302:targetgroup/roboshop-dev-frontend/875750bdb877f8a8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:975391191302:loadbalancer/app/roboshop-dev-frontend-alb/e1d8b1171f984f4d"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "roboshop-dev-frontend",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-03cddf8bef4310f2c"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.component.data.aws_ssm_parameter.vpc_id"
          ]
        }
      ]
    },
    {
      "module": "module.component[\"payment\"]",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:975391191302:targetgroup/roboshop-dev-payment/49d647e1af75c2fe",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:975391191302:listener-rule/app/roboshop-dev-backend-alb/bbb89e45fe55968b/b093b8e0c06a13d1/5b3ee6df2beef43f",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "payment.backend-dev.rameshaws.site"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:975391191302:listener-rule/app/roboshop-dev-backend-alb/bbb89e45fe55968b/b093b8e0c06a13d1/5b3ee6df2beef43f",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:975391191302:listener/app/roboshop-dev-backend-alb/bbb89e45fe55968b/b093b8e0c06a13d1",
            "priority": 50,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "listener_arn"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.component.aws_lb_target_group.main",
            "module.component.data.aws_ssm_parameter.backend_alb_listener_arn",
            "module.component.data.aws_ssm_parameter.frontend_alb_listener_arn",
            "module.component.data.aws_ssm_parameter.vpc_id"
          ]
        }
      ]
    },
    {
      "module": "module.component[\"payment\"]",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:975391191302:targetgroup/roboshop-dev-payment/49d647e1af75c2fe",
            "arn_suffix": "targetgroup/roboshop-dev-payment/49d647e1af75c2fe",
            "deregistration_delay": "120",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 5,
                "matcher": "200-299",
                "path": "/health",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 2,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:975391191302:targetgroup/roboshop-dev-payment/49d647e1af75c2fe",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:975391191302:loadbalancer/app/roboshop-dev-backend-alb/bbb89e45fe55968b"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "roboshop-dev-payment",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-03cddf8bef4310f2c"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.component.data.aws_ssm_parameter.vpc_id"
          ]
        }
      ]
    },
    {
      "module": "module.component[\"shipping\"]",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:975391191302:targetgroup/roboshop-dev-shipping/35d8df95ba4e93cd",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:975391191302:listener-rule/app/roboshop-dev-backend-alb/bbb89e45fe55968b/b093b8e0c06a13d1/d9eb069f1cd06407",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "shipping.backend-dev.rameshaws.site"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:975391191302:listener-rule/app/roboshop-dev-backend-alb/bbb89e45fe55968b/b093b8e0c06a13d1/d9eb069f1cd06407",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:975391191302:listener/app/roboshop-dev-backend-alb/bbb89e45fe55968b/b093b8e0c06a13d1",
            "priority": 40,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "listener_arn"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.component.aws_lb_target_group.main",
            "module.component.data.aws_ssm_parameter.backend_alb_listener_arn",
            "module.component.data.aws_ssm_parameter.frontend_alb_listener_arn",
            "module.component.data.aws_ssm_parameter.vpc_id"
          ]
        }
      ]
    },
    {
      "module": "module.component[\"shipping\"]",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:975391191302:targetgroup/roboshop-dev-shipping/35d8df95ba4e93cd",
            "arn_suffix": "targetgroup/roboshop-dev-shipping/35d8df95ba4e93cd",
            "deregistration_delay": "120",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 5,
                "matcher": "200-299",
                "path": "/health",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 2,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:975391191302:targetgroup/roboshop-dev-shipping/35d8df95ba4e93cd",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:975391191302:loadbalancer/app/roboshop-dev-backend-alb/bbb89e45fe55968b"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "roboshop-dev-shipping",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-03cddf8bef4310f2c"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.component.data.aws_ssm_parameter.vpc_id"
          ]
        }
      ]
    },
    {
      "module": "module.component[\"user\"]",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:975391191302:targetgroup/roboshop-dev-user/1103cbfbcc1e7128",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:975391191302:listener-rule/app/roboshop-dev-backend-alb/bbb89e45fe55968b/b093b8e0c06a13d1/956a22bdf1270b91",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "user.backend-dev.rameshaws.site"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:975391191302:listener-rule/app/roboshop-dev-backend-alb/bbb89e45fe55968b/b093b8e0c06a13d1/956a22bdf1270b91",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:975391191302:listener/app/roboshop-dev-backend-alb/bbb89e45fe55968b/b093b8e0c06a13d1",
            "priority": 20,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "listener_arn"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.component.aws_lb_target_group.main",
            "module.component.data.aws_ssm_parameter.backend_alb_listener_arn",
            "module.component.data.aws_ssm_parameter.frontend_alb_listener_arn",
            "module.component.data.aws_ssm_parameter.vpc_id"
          ]
        }
      ]
    },
    {
      "module": "module.component[\"user\"]",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:975391191302:targetgroup/roboshop-dev-user/1103cbfbcc1e7128",
            "arn_suffix": "targetgroup/roboshop-dev-user/1103cbfbcc1e7128",
            "deregistration_delay": "120",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 5,
                "matcher": "200-299",
                "path": "/health",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 2,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:975391191302:targetgroup/roboshop-dev-user/1103cbfbcc1e7128",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:975391191302:loadbalancer/app/roboshop-dev-backend-alb/bbb89e45fe55968b"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "roboshop-dev-user",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-03cddf8bef4310f2c"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.component.data.aws_ssm_parameter.vpc_id"
          ]
        }
      ]
    }
  ]
}